# SWA-LoRA

./: .gitignore  metrics_curriculum_local.json  metrics_curriculum_v5.json  metrics_curriculum_v6.json  metrics_curriculum_v7.json  metrics_curriculum_v8.json  pyproject.toml  qwen3_swa_lora_experiment_plan.md
scripts/: train_phase1_curriculum.py  train_phase1_qwen3.py
scripts/colab/: eval_baseline.py  run_condition.py  upload.sh
swa_lora/: eval.py  freeze.py  lora_setup.py  losses.py  policy.py  pretrained.py  synthetic.py  toy.py  trainer.py
swa_lora/adapters/: __init__.py  base.py  qwen3.py
tests/: test_phase0_toy.py  test_synthetic.py
